--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -4,12 +4,12 @@
 }
 
 .gen-dropdown-menu {
-    width: fit-content;
+    width: 200px;
     text-align: left;
 }
 
 .gen-option-dropdown {
-    width: 120%;
+    width: fit-content;
     display: inline-flex;
     padding-left: 1%;
 }
@@ -19,4 +19,9 @@
     display: flex;
     margin: auto;
     justify-content: center;
+    max-width: 750px;
+}
+
+.regerate-button-container {
+    text-align: center;
 }
